--- a/Sprint1/detalle_mascota.html
+++ b/Sprint1/detalle_mascota.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,25 +11,44 @@
     <link rel="stylesheet" href="style.css">
     <title>Detalle de mascota</title>
 </head>
-<body>
+
+<body id="detalle">
     <header>
         <div class="imagen_mascota">
             <img src="imagenes/perro1.jpg">
         </div>
+        <a class='flotante-atras' href='index.html' ><img src="imagenes/back.png"/></a>
     </header>
     <main>
-        <div class="content-fluid descripcion-mascota mx-2 mt-2">
-            <div class="datos mx-3 mt-2">
-                <div class="nombre-mascota mt-3">
-                    Rocky
+        <div class="content-fluid descripcion-mascota mt-3">
+            <div class="datos mx-4 mt-2">
+                <div class="nombre-mascota mt-4">
+                    <p class="Headline1">Rocky
+                        <img src="imagenes/Component 5.png">
+                    </p>
+                    <a class='flotante-favorito' href='#' ><img src="imagenes/Property 1=No guardado.png"/></a>
                 </div>
-                <div class="raza-mascota mt-3">
+                <div class="raza-mascota mt-4">
                     <div class="row">
                         <div class="col-6">
-                            Rottweiler
+                            <div class="row">
+                                <div class="col-2">
+                                    <img src="imagenes/Component 1.png">
+                                </div>
+                                <div class="col-10">
+                                    <p class=" body2Regular">Rottweiler</p>
+                                </div>
+                            </div>
                         </div>
                         <div class="col-6">
-                            3 meses
+                            <div class="row">
+                                <div class="col-2">
+                                    <img src="imagenes/edad.png">
+                                </div>
+                                <div class="col-10">
+                                    <p class="body2Regular">3 meses</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -38,46 +58,86 @@
                             <img src="imagenes/Property 1=map-pin.png">
                         </div>
                         <div class="col-8">
-                            4140 Parker Rd. Allentown, 
-                            New Mexico 31134
+                            <p class="body2Regular">4140 Parker Rd. Allentown,
+                                New Mexico 31134</p>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="personalidad-mascota mx-3 mt-4">
-                <div class="titulo-personalidad mt-4">
-                    Personalidad
+            <div class="personalidad-mascota  mx-4 mt-4">
+                <div class="titulo-personalidad mt-4 Headline2">
+                    <p class="Headline2">Personalidad</p>
                 </div>
-                <div class="personalidad-cards mt-1">
+                <div class="personalidad-cards ms-2 me-2 mt-1">
                     <div class="row">
-                        <div class="col cards">
+                        <div class="col cards carinoso me-4">
                             <div class="col-4">
-                                <img src="imagenes/Property 1=Cariñoso.png">
+                                <img class= "imagen-personalidad ps-2" src="imagenes/Property 1=Cariñoso.png">
                             </div>
                             <div class="col-4">
-                                Cariñoso
-                            </div>
-                        </div>
-                        <div class="col cards">
-                            <div class="col-4">
-                                <img src="imagenes/Property 1=Inquieto.png">
-                            </div>
-                            <div class="col-4 cards">
-                                Inquieto
+                                <p class="body1Regular">Cariñoso</p>
                             </div>
                         </div>
-                        <div class="col cards">
+                        <div class="col cards inquieto me-4">
                             <div class="col-4">
-                                <img src="imagenes/Property 1=Jugueton.png">
+                                <img class= "imagen-personalidad ps-3" src="imagenes/Property 1=Inquieto.png">
                             </div>
                             <div class="col-4">
-                                Jugueton
+                                <p class="body1Regular ms-2">Inquieto</p>
+                            </div>
+                        </div>
+                        <div class="col cards jugueton">
+                            <div class="col-4">
+                                <img class= "imagen-personalidad ps-3" src="imagenes/Property 1=Jugueton.png">
+                            </div>
+                            <div class="col-4">
+                                <p class="body1Regular ms-1">Jugueton</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-
+            <div class="historia-mascota  mx-4 mt-3">
+                <div class="row">
+                    <div class="col-12 Headline2">
+                        <p class="Headline2">Historia de Rocky</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <p class="body1Regular">Rocky es un perrito muy lindo y cariñoso, tiene 5 hermanitos más y por
+                            cuestiones de espacio
+                            y
+                            tiempo no podremos cuidar a todos, nuestra misión es encontrar la familia ideal para él y
+                            seguro
+                            que tú eres la persona indicada.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="contactar  mx-4 mb-5">
+                <div class="row">
+                    <div class="col-6">
+                        <div class="row">
+                            <div class="col-4">
+                                <img id="imagen-perro" src="imagenes/Ellipse 9.png">
+                            </div>
+                            <div class="col-8 mt-2 ">
+                                <div class="row">
+                                    <p class="caption mb-1">Publicado por</p>
+                                </div>
+                                <div class="row">
+                                    <p class="body2Bold">Maria Dolores</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <a href="conectar.html" class="btn btn-secondary btn-contactar buttom">
+                            Conectar
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
     <footer>
@@ -96,4 +156,5 @@
         </nav>
     </footer>
 </body>
+
 </html>
