--- a/Sprint1/conectar.html
+++ b/Sprint1/conectar.html
@@ -7,15 +7,30 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Nunito" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/conectar.css">
     <title>Conectar con</title>
 </head>
-<body>
-    <header>
-
+<body id="mensajes">
+    <header id="div-contacto">
+        <div class="contacto">
+            <div class="row">
+                <div class="col mt-3 imagen-contacto mb-3">
+                    <img src="imagenes/Ellipse 9.png">
+                    <div class="col mt-1">
+                        <p class="body1Bold">Maria Dolores</p>
+                    </div>
+                    <a class='flotante-atras' href='detalle_mascota.html' ><img src="imagenes/back.png"/></a>
+                </div>
+            </div>
+        </div>
     </header>
     <main>
-
+        <div class="contenido">
+            <p class="body1Bold">Aún no hay mensajes</p>
+        </div>
+        <div class="msn">
+            <input class="ms-1 txt-mensaje body1Regular form-control" type="text" placeholder="Aa">
+        </div>
     </main>
     <footer>
         <nav class="navbar navbar-expand-lg navbar-light bg-light menu-mascotas">
