--- a/Sprint1/detalle_mascota.html
+++ b/Sprint1/detalle_mascota.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Nunito" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/detalle_mascota.css">
     <title>Detalle de mascota</title>
 </head>
 
@@ -52,7 +52,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="raza-mascota mt-3">
+                <div class="lugar-mascota mt-3">
                     <div class="row">
                         <div class="col-1">
                             <img src="imagenes/Property 1=map-pin.png">
@@ -119,7 +119,7 @@
                     <div class="col-6">
                         <div class="row">
                             <div class="col-4">
-                                <img id="imagen-perro" src="imagenes/Ellipse 9.png">
+                                <img id="imagen-contacto" src="imagenes/Ellipse 9.png">
                             </div>
                             <div class="col-8 mt-2 ">
                                 <div class="row">
