Correción de un parrafo en en main-section Introduction

--- a/Semana2/Reto2/index.html
+++ b/Semana2/Reto2/index.html
@@ -64,7 +64,7 @@
             <p>Este curso esta pensado para ser cursado por una persona que no conoce nada de programación y se emplea
                 el lenguaje Python como primer lenguaje para acercarse a la programación de computadoras.</p>
             <p>El objetivo fundamental de este tutorial es permitir que el estudiante pueda resolver problemas de
-                distinta índole como:
+                distinta índole como:</p>
             <ul>
                 <li>Matemáticos</li>
                 <li>Administrativos</li>
@@ -72,7 +72,7 @@
                 <li>Contables</li>
                 <li>Etc</li>
             </ul>
-            empleando como herramienta la computadora.</p>
+            <p>empleando como herramienta la computadora.</p>
             <p>Hay que tener en cuenta que para llegar a ser un programador se debe recorrer un largo camino donde cada
                 tema es fundamental para conceptos futuros. Es importante no dejar temas sin entender y relacionar.</p>
             <p>La programación a diferencia de otras materias que ha estudiado como podría ser la historia requiere un
