Funcion de favoritos

--- a/Sprint1/index.html
+++ b/Sprint1/index.html
@@ -10,6 +10,7 @@
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Nunito" />
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="principal.css">
 </head>
 
 <body id="home">
@@ -122,9 +123,9 @@
             <div class="container-fluid">
                 <a class="nav-link active" aria-current="page" href="index.html" tabindex="-1">
                     <img src="imagenes/Property 1=home.png" alt="" width="24" height="24"></a>
-                <a class="nav-link" aria-current="page" href="#" tabindex="-1">
+                <a class="nav-link" aria-current="page" href="conectar.html" tabindex="-1">
                     <img src="imagenes/Property 1=message-circle.png" alt="" width="24" height="24"></a>
-                <a class="nav-link" aria-current="page" href="#" tabindex="-1">
+                <a class="nav-link" aria-current="page" href="favoritos.html" tabindex="-1">
                     <img src="imagenes/Property 1=heart.png" alt="" width="24" height="24"></a>
                 <a class="nav-link" aria-current="page" href="#" tabindex="-1">
                     <img src="imagenes/Property 1=search.png" alt="" width="24" height="24">
