--- a/Sprint1/favoritos.html
+++ b/Sprint1/favoritos.html
@@ -1,37 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mascotas Favoritas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Nunito" />
-    <link rel="stylesheet" href="styles/conectar.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="principal.css">
-    <title>Conectar con</title>
 </head>
-<body id="mensajes">
-    <header id="div-contacto">
-        <div class="contacto">
+
+<body id="home">
+    <header>
+        <div class="container-fluid">
             <div class="row">
-                <div class="col mt-3 imagen-contacto mb-3">
-                    <img src="imagenes/Ellipse9.png">
-                    <div class="col mt-1">
-                        <p class="body1Bold">Maria Dolores</p>
-                    </div>
-                    <a class='flotante-atras' href='detalle_mascota.html' ><img src="imagenes/back.png"/></a>
+                <div class="col mt-5 titulo">
+                    <h1 class="Headline1">Mascotas Favoritas</h1>
+                </div>
+            </div>
+    </header>
+    <main>
+        <div class="container-fluid mt-4 mb-5">
+            <div class="row row-cols-2 row-cols-md-2 g-4 grid-mascotas">
+                <div class="col columna1">
+
+
+                </div>
+                <div class="col pt-3 columna2">
+
                 </div>
             </div>
         </div>
-    </header>
-    <main>
-        <div class="contenido">
-            <p class="body1Bold">Aún no hay mensajes</p>
-        </div>
-        <div class="msn">
-            <input class="ms-1 txt-mensaje body1Regular form-control" type="text" placeholder="Aa">
-        </div>
+
+
     </main>
     <footer>
         <nav class="navbar navbar-expand-lg navbar-light bg-light menu-mascotas">
@@ -49,4 +53,9 @@
         </nav>
     </footer>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+    crossorigin="anonymous"></script>
+<script type="module" src="favoritos.js"></script>
+
 </html>
