Función favoritos terminada

--- a/Sprint1/detalle_mascota.html
+++ b/Sprint1/detalle_mascota.html
@@ -26,6 +26,9 @@
                 <div class="nombre-mascota mt-4">
 
                 </div>
+                <div class="iconoFavorito">
+                    
+                </div>
                 <div class="raza-mascota mt-4">
 
                 </div>
