Función de mensajes medio funcional

--- a/Sprint1/contenidoMensaje.html
+++ b/Sprint1/contenidoMensaje.html
@@ -10,22 +10,19 @@
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Nunito" />
     <link rel="stylesheet" href="styles/conectar.css">
     <link rel="stylesheet" href="styles/principal.css">
-    <title>Conectar con</title>
+    <link rel="stylesheet" href="styles/contenidoMensaje.css">
+    <title>Contenido mensaje</title>
 </head>
 
 <body id="mensajes">
     <header id="div-contacto">
         <div class="contacto">
-            <div class="row">
-                <div class="col mt-3 imagen-contacto mb-3">
-
-                </div>
-            </div>
+            
         </div>
     </header>
     <main>
-        <div class="contenido">
-            <p class="body1Bold">Aún no hay mensajes</p>
+        <div class="contenido-mensaje">
+            
         </div>
         <div class="msn">
             <input class="ms-1 txt-mensaje body1Regular form-control" type="text" placeholder="Aa">
@@ -46,7 +43,7 @@
             </div>
         </nav>
     </footer>
-    <script type="module" src="app/conectar.js"></script>
+    <script type="module" src="app/contenidoMensaje.js"></script>
 </body>
 
 </html>
