--- a/Sprint1/favoritos.html
+++ b/Sprint1/favoritos.html
@@ -9,8 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Nunito" />
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="principal.css">
+    <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="styles/principal.css">
 </head>
 
 <body id="home">
@@ -21,6 +21,7 @@
                     <h1 class="Headline1">Mascotas Favoritas</h1>
                 </div>
             </div>
+        </div>
     </header>
     <main>
         <div class="container-fluid mt-4 mb-5">
@@ -42,12 +43,12 @@
             <div class="container-fluid">
                 <a class="nav-link active" aria-current="page" href="index.html" tabindex="-1">
                     <img src="imagenes/Property 1=home.png" alt="" width="24" height="24"></a>
-                <a class="nav-link" aria-current="page" href="conectar.html" tabindex="-1">
+                <a class="nav-link" aria-current="page" href="mensajes.html" tabindex="-1">
                     <img src="imagenes/Property 1=message-circle.png" alt="" width="24" height="24"></a>
                 <a class="nav-link" aria-current="page" href="favoritos.html" tabindex="-1">
-                    <img src="imagenes/Property 1=heart.png" alt="" width="24" height="24"></a>
-                <a class="nav-link" aria-current="page" href="#" tabindex="-1">
-                    <img src="imagenes/Property 1=search.png" alt="" width="24" height="24">
+                    <img class="icono-activo" src="imagenes/favoritos.png" alt="" width="24" height="24"></a>
+                <a class="nav-link" aria-current="page" href="usuario.html" tabindex="-1">
+                    <img src="imagenes/Property 1=user.png" alt="" width="24" height="24">
                 </a>
             </div>
         </nav>
@@ -56,6 +57,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
     crossorigin="anonymous"></script>
-<script type="module" src="favoritos.js"></script>
+<script type="module" src="app/favoritos.js"></script>
 
 </html>
