--- a/Sprint1/mensajes.html
+++ b/Sprint1/mensajes.html
@@ -8,35 +8,34 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Nunito" />
-    <link rel="stylesheet" href="styles/conectar.css">
+    <link rel="stylesheet" href="styles/mensajes.css">
     <link rel="stylesheet" href="styles/principal.css">
-    <title>Conectar con</title>
+    <title>Mensajes</title>
 </head>
 
 <body id="mensajes">
-    <header id="div-contacto">
-        <div class="contacto">
+    <header>
+        <div class="container-fluid">
             <div class="row">
-                <div class="col mt-3 imagen-contacto mb-3">
-
+                <div class="col mt-5 titulo">
+                    <h1 class="Headline1">Mensajes</h1>
                 </div>
             </div>
         </div>
     </header>
     <main>
-        <div class="contenido">
-            <p class="body1Bold">Aún no hay mensajes</p>
-        </div>
-        <div class="msn">
-            <input class="ms-1 txt-mensaje body1Regular form-control" type="text" placeholder="Aa">
-        </div>
+
+        <a href="contenidoMensaje.html" class="enlace-ver-mensaje mb-5">
+            
+        </a>
+
     </main>
     <footer>
         <nav class="navbar navbar-expand-lg navbar-light bg-light menu-mascotas">
             <div class="container-fluid">
                 <a class="nav-link active" aria-current="page" href="index.html" tabindex="-1">
                     <img src="imagenes/Property 1=home.png" alt="" width="24" height="24"></a>
-                <a class="nav-link" aria-current="page" href="mensajes.html" tabindex="-1">
+                <a class="nav-link" aria-current="page" href="#" tabindex="-1">
                     <img class="icono-activo" src="imagenes/mensajes.png" alt="" width="24" height="24"></a>
                 <a class="nav-link" aria-current="page" href="favoritos.html" tabindex="-1">
                     <img src="imagenes/Property 1=heart.png" alt="" width="24" height="24"></a>
@@ -46,7 +45,10 @@
             </div>
         </nav>
     </footer>
-    <script type="module" src="app/conectar.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+        crossorigin="anonymous"></script>
+    <script type="module" src="app/mensajes.js"></script>
 </body>
 
 </html>
