--- a/Sprint1/usuario.html
+++ b/Sprint1/usuario.html
@@ -1,35 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Adopcion de mascotas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Nunito" />
-    <link rel="stylesheet" href="styles/conectar.css">
+    <link rel="stylesheet" href="styles/index.css">
     <link rel="stylesheet" href="styles/principal.css">
-    <title>Conectar con</title>
 </head>
 
-<body id="mensajes">
-    <header id="div-contacto">
-        <div class="contacto">
-            <div class="row">
-                <div class="col mt-3 imagen-contacto mb-3">
-
-                </div>
-            </div>
-        </div>
+<body id="home">
+    <header>
+        
     </header>
     <main>
-        <div class="contenido">
-            <p class="body1Bold">Aún no hay mensajes</p>
-        </div>
-        <div class="msn">
-            <input class="ms-1 txt-mensaje body1Regular form-control" type="text" placeholder="Aa">
-        </div>
+        
     </main>
     <footer>
         <nav class="navbar navbar-expand-lg navbar-light bg-light menu-mascotas">
@@ -37,16 +26,18 @@
                 <a class="nav-link active" aria-current="page" href="index.html" tabindex="-1">
                     <img src="imagenes/Property 1=home.png" alt="" width="24" height="24"></a>
                 <a class="nav-link" aria-current="page" href="mensajes.html" tabindex="-1">
-                    <img class="icono-activo" src="imagenes/mensajes.png" alt="" width="24" height="24"></a>
+                    <img src="imagenes/Property 1=message-circle.png" alt="" width="24" height="24"></a>
                 <a class="nav-link" aria-current="page" href="favoritos.html" tabindex="-1">
                     <img src="imagenes/Property 1=heart.png" alt="" width="24" height="24"></a>
-                <a class="nav-link" aria-current="page" href="usuario.html" tabindex="-1">
-                    <img src="imagenes/Property 1=user.png" alt="" width="24" height="24">
+                <a class="nav-link" aria-current="page" href="#" tabindex="-1">
+                    <img class="icono-activo" src="imagenes/perfil.png" alt="" width="24" height="24">
                 </a>
             </div>
         </nav>
     </footer>
-    <script type="module" src="app/conectar.js"></script>
 </body>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+    crossorigin="anonymous"></script>
+<script type="module" src="app/main.js" ></script>
 </html>
