Comienzo de la funcionalidad de inicio de sesión

--- a/Sprint1/contenidoMensaje.html
+++ b/Sprint1/contenidoMensaje.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -24,7 +24,7 @@
         <div class="contenido-mensaje">
             
         </div>
-        <div class="msn">
+        <div class="msn mb-5 mt-5">
             <input class="ms-1 txt-mensaje body1Regular form-control" type="text" placeholder="Aa">
         </div>
     </main>
