--- a/Sprint1/usuario.html
+++ b/Sprint1/usuario.html
@@ -11,14 +11,43 @@
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Nunito" />
     <link rel="stylesheet" href="styles/index.css">
     <link rel="stylesheet" href="styles/principal.css">
+    <link rel="stylesheet" href="styles/usuario.css">
 </head>
 
 <body id="home">
     <header>
-        
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col mt-5 tituloPerfil">
+                    <h1 class="Headline1">Perfil</h1>
+                </div>
+            </div>
+        </div>
     </header>
     <main>
-        
+        <div class="row usuario">
+            <img src="imagenes/Ellipse 11.png">
+            <div class="col datos">
+
+            </div>
+        </div>
+        <form id=formUsuario>
+            <div class="campo">
+                <label for="name" class="form-label label-edit">Nombre</label>
+                <input id="name" class="ms-1 edit body1Regular form-control" type="text" placeholder="">
+            </div>
+            <div class="campo">
+                <label for="lastName" class="form-label label-edit">Apellido</label>
+                <input id="lastName" class="ms-1 edit body1Regular form-control" type="text" placeholder="">
+            </div>
+            <div class="campo">
+                <label for="email" class="form-label label-edit">Correo</label>
+                <input id="email" class="ms-1 edit body1Regular form-control" type="text" placeholder="">
+            </div>
+            <div class="campo">
+                <button type="submit" class="btn btn-primary guardar-cambios">Guardar</button>
+            </div>
+        </form>
     </main>
     <footer>
         <nav class="navbar navbar-expand-lg navbar-light bg-light menu-mascotas">
@@ -39,5 +68,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
     crossorigin="anonymous"></script>
-<script type="module" src="app/main.js" ></script>
+<script type="module" src="app/usuario.js"></script>
+
 </html>
