--- a/Sprint1/detalle_mascota.html
+++ b/Sprint1/detalle_mascota.html
@@ -67,7 +67,8 @@
                         </div>
                     </div>
                     <div class="col-6">
-                        <a href="contenidoMensaje.html" class="btn btn-secondary btn-contactar buttom">
+                        <a href="conectar.html" class="btn btn-secondary btn-contactar buttom"
+                        onClick="contacto()">
                             Conectar
                         </a>
                     </div>
