Pagina completa para mobile

--- a/Sprint1/contenidoMensaje.html
+++ b/Sprint1/contenidoMensaje.html
@@ -25,7 +25,7 @@
             
         </div>
         <div class="msn mb-5 mt-5">
-            <input class="ms-1 txt-mensaje body1Regular form-control" type="text" placeholder="Aa">
+            <input class="ms-1 txt-mensaje2 body1Regular form-control" type="text" placeholder="Aa">
         </div>
     </main>
     <footer>
