Diseño de pagina para ordenadores

--- a/Sprint1/contenidoMensaje.html
+++ b/Sprint1/contenidoMensaje.html
@@ -17,15 +17,17 @@
 <body id="mensajes">
     <header id="div-contacto">
         <div class="contacto">
-            
+
         </div>
     </header>
     <main>
-        <div class="contenido-mensaje">
-            
-        </div>
-        <div class="msn mb-5 mt-5">
-            <input class="ms-1 txt-mensaje2 body1Regular form-control" type="text" placeholder="Aa">
+        <div class="contenedor-mensajes">
+            <div class="contenido-mensaje">
+
+            </div>
+            <div class="msn mb-5 mt-5">
+                <input class="ms-1 txt-mensaje2 body1Regular form-control" type="text" placeholder="Aa">
+            </div>
         </div>
     </main>
     <footer>
@@ -33,7 +35,7 @@
             <div class="container-fluid">
                 <a class="nav-link active" aria-current="page" href="index.html" tabindex="-1">
                     <img src="imagenes/Property 1=home.png" alt="" width="24" height="24"></a>
-                <a class="nav-link" aria-current="page" href="mensajes.html" tabindex="-1">
+                <a class="nav-link-mensaje" aria-current="page" href="mensajes.html" tabindex="-1">
                     <img class="icono-activo" src="imagenes/mensajes.png" alt="" width="24" height="24"></a>
                 <a class="nav-link" aria-current="page" href="favoritos.html" tabindex="-1">
                     <img src="imagenes/Property 1=heart.png" alt="" width="24" height="24"></a>
