--- a/Sprint1/mensajes.html
+++ b/Sprint1/mensajes.html
@@ -24,10 +24,11 @@
         </div>
     </header>
     <main>
+        <div class="contenedor-mensajes">
+            <a href="contenidoMensaje.html" class="enlace-ver-mensaje mb-5">
 
-        <a href="contenidoMensaje.html" class="enlace-ver-mensaje mb-5">
-            
-        </a>
+            </a>
+        </div>
         <br><br>
     </main>
     <footer>
@@ -35,7 +36,7 @@
             <div class="container-fluid">
                 <a class="nav-link active" aria-current="page" href="index.html" tabindex="-1">
                     <img src="imagenes/Property 1=home.png" alt="" width="24" height="24"></a>
-                <a class="nav-link" aria-current="page" href="#" tabindex="-1">
+                <a class="nav-link-mensaje" aria-current="page" href="#" tabindex="-1">
                     <img class="icono-activo" src="imagenes/mensajes.png" alt="" width="24" height="24"></a>
                 <a class="nav-link" aria-current="page" href="favoritos.html" tabindex="-1">
                     <img src="imagenes/Property 1=heart.png" alt="" width="24" height="24"></a>
