--- a/Sprint1/conectar.html
+++ b/Sprint1/conectar.html
@@ -14,9 +14,10 @@
 </head>
 
 <body id="mensajes">
+
     <header id="div-contacto">
         <div class="contacto">
-            <div class="row">
+            <div class="row header-contacto">
                 <div class="col mt-3 imagen-contacto mb-3">
 
                 </div>
@@ -24,19 +25,22 @@
         </div>
     </header>
     <main>
-        <div class="contenido">
-            <p class="body1Bold">Aún no hay mensajes</p>
-        </div>
-        <div class="msn">
-            <input class="ms-1 txt-mensaje body1Regular form-control" type="text" placeholder="Aa">
+        <div class="contenedor-mensajes">
+            <div class="contenido-mensaje">
+                <p class="body1Bold vacio">Aún no hay mensajes</p>
+            </div>
+            <div class="msn mb-5 mt-5">
+                <input class="ms-1 txt-mensaje2 body1Regular form-control" type="text" placeholder="Aa">
+            </div>
         </div>
     </main>
+
     <footer>
         <nav class="navbar navbar-expand-lg navbar-light bg-light menu-mascotas">
             <div class="container-fluid">
                 <a class="nav-link active" aria-current="page" href="index.html" tabindex="-1">
                     <img src="imagenes/Property 1=home.png" alt="" width="24" height="24"></a>
-                <a class="nav-link" aria-current="page" href="mensajes.html" tabindex="-1">
+                <a class="nav-link-mensaje" aria-current="page" href="mensajes.html" tabindex="-1">
                     <img class="icono-activo" src="imagenes/mensajes.png" alt="" width="24" height="24"></a>
                 <a class="nav-link" aria-current="page" href="favoritos.html" tabindex="-1">
                     <img src="imagenes/Property 1=heart.png" alt="" width="24" height="24"></a>
