--- a/Sprint1/detalle_mascota.html
+++ b/Sprint1/detalle_mascota.html
@@ -81,7 +81,7 @@
             <div class="container-fluid">
                 <a class="nav-link active" aria-current="page" href="index.html" tabindex="-1">
                     <img class="icono-activo" src="imagenes/home.png" alt="" width="24" height="24"></a>
-                <a class="nav-link" aria-current="page" href="mensajes.html" tabindex="-1">
+                <a class="nav-link-mensaje" aria-current="page" href="mensajes.html" tabindex="-1">
                     <img src="imagenes/Property 1=message-circle.png" alt="" width="24" height="24"></a>
                 <a class="nav-link" aria-current="page" href="favoritos.html" tabindex="-1">
                     <img src="imagenes/Property 1=heart.png" alt="" width="24" height="24"></a>
