--- a/Sprint1/favoritos.html
+++ b/Sprint1/favoritos.html
@@ -26,13 +26,13 @@
     <main>
         <div class="container-fluid mt-4 mb-5">
             <div class="row row-cols-2 row-cols-md-2 g-4 grid-mascotas">
-                <div class="col columna1">
+                <!--<div class="col columna1">
 
 
                 </div>
                 <div class="col pt-3 columna2">
 
-                </div>
+                </div>-->
             </div>
         </div>
 
@@ -43,7 +43,7 @@
             <div class="container-fluid">
                 <a class="nav-link active" aria-current="page" href="index.html" tabindex="-1">
                     <img src="imagenes/Property 1=home.png" alt="" width="24" height="24"></a>
-                <a class="nav-link" aria-current="page" href="mensajes.html" tabindex="-1">
+                <a class="nav-link-mensaje" aria-current="page" href="mensajes.html" tabindex="-1">
                     <img src="imagenes/Property 1=message-circle.png" alt="" width="24" height="24"></a>
                 <a class="nav-link" aria-current="page" href="favoritos.html" tabindex="-1">
                     <img class="icono-activo" src="imagenes/favoritos.png" alt="" width="24" height="24"></a>
