--- a/Sprint1/index.html
+++ b/Sprint1/index.html
@@ -21,9 +21,9 @@
                     <h1 class="Headline1">Adopta una adorable mascota</h1>
                 </div>
             </div>
-            <div class="row">
+            <div class="row btn-categorias">
                 <div class="col mt-3">
-                    <h2 class="subtitle1">Categoria de mascota</h2>
+                    <h2 class="subtitle1 div-categorias">Categoria de mascota</h2>
                 </div>
                 <div class="row">
                     <div class="col-6 mx-1">
@@ -33,7 +33,7 @@
                                     <img id="imagen-perro" src="imagenes/Categoría=Perros.png">
                                 </div>
                                 <div class="col-6 categoria-perro">
-                                    <p class="body1Bold">Perros</p>
+                                    <p class="buttom">Perros</p>
                                 </div>
                             </div>
                         </button>
@@ -45,7 +45,7 @@
                                     <img id="imagen-gato" src="imagenes/Categoría=Gatos.png">
                                 </div>
                                 <div class="col-6 categoria-gato">
-                                    <p class="body1Bold">Gatos</p>
+                                    <p class="buttom">Gatos</p>
                                 </div>
                             </div>
                         </button>
@@ -56,21 +56,23 @@
     <main>
         <div class="container-fluid mt-4 mb-3">
             <div class="row row-cols-2 row-cols-md-2 g-4 grid-mascotas">
-                <div class="col columna1">
+                <!--<div class="col columna1">
 
 
                 </div>
                 <div class="col pt-3 columna2">
 
-                </div>
+                </div>-->
             </div>
         </div>
 
         <!--modal-->
-        <button type="button" class="btn btn-secondary btn-modal mb-5" data-bs-toggle="modal"
-            data-bs-target="#staticBackdrop1">
-            Más información
-        </button>
+        <div class="div-btn-modal">
+            <button type="button" class="btn btn-secondary btn-modal mb-5 buttom" data-bs-toggle="modal"
+                data-bs-target="#staticBackdrop1">
+                Más información
+            </button>
+        </div>
         <div class="modal fade" id="staticBackdrop1" data-bs-keyboard="false" tabindex="-1"
             aria-labelledby="staticBackdropLabel" aria-hidden="true">
             <div class="modal-dialog">
@@ -125,8 +127,8 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light menu-mascotas">
             <div class="container-fluid">
                 <a class="nav-link active" aria-current="page" href="index.html" tabindex="-1">
-                    <img class="icono-activo" src="imagenes/home.png" alt="" width="24" height="24"></a>
-                <a class="nav-link" aria-current="page" href="mensajes.html" tabindex="-1">
+                    <img class="icono-activo-home" src="imagenes/home.png" alt="" width="24" height="24"></a>
+                <a class="nav-link-mensaje" aria-current="page" href="mensajes.html" tabindex="-1">
                     <img src="imagenes/Property 1=message-circle.png" alt="" width="24" height="24"></a>
                 <a class="nav-link" aria-current="page" href="favoritos.html" tabindex="-1">
                     <img src="imagenes/Property 1=heart.png" alt="" width="24" height="24"></a>
