--- a/Sprint1/usuario.html
+++ b/Sprint1/usuario.html
@@ -25,41 +25,43 @@
         </div>
     </header>
     <main>
-        <div class="row usuario">
-            <img src="imagenes/Ellipse 11.png">
-            <div class="col datos">
+        <div class="div-usuario">
+            <div class="row usuario">
+                <img src="imagenes/Ellipse 11.png">
+                <div class="col datos">
 
+                </div>
             </div>
+            <form id=formUsuario>
+                <div class="campo">
+                    <label for="name" class="form-label body1Regular label-edit">Nombre</label>
+                    <input id="name" class="ms-1 edit body1Regular form-control" type="text" placeholder="">
+                </div>
+                <div class="campo">
+                    <label for="lastName" class="form-label body1Regular label-edit">Apellido</label>
+                    <input id="lastName" class="ms-1 edit body1Regular form-control" type="text" placeholder="">
+                </div>
+                <div class="campo">
+                    <label for="email" class="form-label body1Regular label-edit">Correo</label>
+                    <input id="email" class="ms-1 edit body1Regular form-control" type="text" placeholder="">
+                </div>
+                <div class="">
+                    <button type="submit" class="btn btn-secondary buttom guardar-cambios">Guardar</button>
+                </div>
+            </form>
         </div>
-        <form id=formUsuario>
-            <div class="campo">
-                <label for="name" class="form-label label-edit">Nombre</label>
-                <input id="name" class="ms-1 edit body1Regular form-control" type="text" placeholder="">
-            </div>
-            <div class="campo">
-                <label for="lastName" class="form-label label-edit">Apellido</label>
-                <input id="lastName" class="ms-1 edit body1Regular form-control" type="text" placeholder="">
-            </div>
-            <div class="campo">
-                <label for="email" class="form-label label-edit">Correo</label>
-                <input id="email" class="ms-1 edit body1Regular form-control" type="text" placeholder="">
-            </div>
-            <div class="campo">
-                <button type="submit" class="btn btn-primary guardar-cambios">Guardar</button>
-            </div>
-        </form>
     </main>
     <footer>
         <nav class="navbar navbar-expand-lg navbar-light bg-light menu-mascotas">
             <div class="container-fluid">
                 <a class="nav-link active" aria-current="page" href="index.html" tabindex="-1">
                     <img src="imagenes/Property 1=home.png" alt="" width="24" height="24"></a>
-                <a class="nav-link" aria-current="page" href="mensajes.html" tabindex="-1">
+                <a class="nav-link-mensaje" aria-current="page" href="mensajes.html" tabindex="-1">
                     <img src="imagenes/Property 1=message-circle.png" alt="" width="24" height="24"></a>
                 <a class="nav-link" aria-current="page" href="favoritos.html" tabindex="-1">
                     <img src="imagenes/Property 1=heart.png" alt="" width="24" height="24"></a>
                 <a class="nav-link" aria-current="page" href="#" tabindex="-1">
-                    <img class="icono-activo" src="imagenes/perfil.png" alt="" width="24" height="24">
+                    <img class="icono-activo-perfil" src="imagenes/perfil.png" alt="" width="24" height="24">
                 </a>
             </div>
         </nav>
