--- a/Sprint1/index.html
+++ b/Sprint1/index.html
@@ -30,7 +30,7 @@
                         <button class="btn-perro btn btn-secondary" onClick="perro()">
                             <div class="row">
                                 <div class="col-4 icono-perro">
-                                    <img id="imagen-perro" src="imagenes/Categoría=Perros.png">
+                                    <img id="imagen-perro" src="https://i.ibb.co/mC74qWB/Categor-a-Perros.png">
                                 </div>
                                 <div class="col-6 categoria-perro">
                                     <p class="buttom">Perros</p>
@@ -42,7 +42,7 @@
                         <button class="btn-gato btn btn-secondary" onClick="gato()">
                             <div class="row">
                                 <div class="col-4 icono-gato">
-                                    <img id="imagen-gato" src="imagenes/Categoría=Gatos.png">
+                                    <img id="imagen-gato" src="https://i.ibb.co/mTyRchQ/Categor-a-Gatos.png">
                                 </div>
                                 <div class="col-6 categoria-gato">
                                     <p class="buttom">Gatos</p>
@@ -79,7 +79,7 @@
                 <div class="modal-content">
                     <div class="modal-body mt-5 mx-3" id="modal1">
                         <div class="modal-imagen mb-5">
-                            <img src="imagenes/esperando-adopción.png">
+                            <img src="https://i.ibb.co/cJqtPyX/esperando-adopci-n.png">
                         </div>
                         <div class="modal-texto">
                             <p class="Headline2">Encuentra tu amigo fiel</p>
@@ -89,7 +89,7 @@
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary btn-modal" data-bs-toggle="modal"
+                        <button type="button" class="btn btn-secondary btn-modal buttom" data-bs-toggle="modal"
                             data-bs-dismiss="modal" data-bs-target="#staticBackdrop2">Siguiente</button>
                     </div>
                 </div>
@@ -101,7 +101,7 @@
                 <div class="modal-content">
                     <div class="modal-body">
                         <div class="modal-imagen mb-5">
-                            <img src="imagenes/Adoptado.png">
+                            <img src="https://i.ibb.co/L545s3b/Adoptado.png">
                         </div>
                         <div class="modal-texto">
                             <p class="Headline2">Crea una nueva historia</p>
@@ -116,7 +116,7 @@
                         <!--<input type="checkbox" id="cerrar">
                         <label for="cerrar" class="btn btn-secondary btn-modal" data-bs-toggle="modal"
                         data-bs-dismiss="modal" id="btn-cerrar">Cerrar</label>-->
-                        <button type="button" class="btn btn-secondary btn-modal" id="cerrar-modal"
+                        <button type="button" class="btn btn-secondary btn-modal buttom" id="cerrar-modal"
                             data-bs-toggle="modal" data-bs-dismiss="modal">Cerrar</button>
                     </div>
                 </div>
@@ -127,13 +127,13 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light menu-mascotas">
             <div class="container-fluid">
                 <a class="nav-link active" aria-current="page" href="index.html" tabindex="-1">
-                    <img class="icono-activo-home" src="imagenes/home.png" alt="" width="24" height="24"></a>
+                    <img class="icono-activo-home" src="https://i.ibb.co/2ZcsN2F/home.png" alt="" width="24" height="24"></a>
                 <a class="nav-link-mensaje" aria-current="page" href="mensajes.html" tabindex="-1">
-                    <img src="imagenes/Property 1=message-circle.png" alt="" width="24" height="24"></a>
+                    <img src="https://i.ibb.co/SNtNhhC/Property-1-message-circle.png" alt="" width="24" height="24"></a>
                 <a class="nav-link" aria-current="page" href="favoritos.html" tabindex="-1">
-                    <img src="imagenes/Property 1=heart.png" alt="" width="24" height="24"></a>
+                    <img src="https://i.ibb.co/z23WHsF/Property-1-heart.png" alt="" width="24" height="24"></a>
                 <a class="nav-link" aria-current="page" href="usuario.html" tabindex="-1">
-                    <img src="imagenes/Property 1=user.png" alt="" width="24" height="24">
+                    <img src="https://i.ibb.co/3RMCBkL/Component-2.png" alt="" width="24" height="24">
                 </a>
             </div>
         </nav>
