--- a/Sprint1/usuario.html
+++ b/Sprint1/usuario.html
@@ -27,7 +27,7 @@
     <main>
         <div class="div-usuario">
             <div class="row usuario">
-                <img src="imagenes/Ellipse 11.png">
+                <img src="https://i.ibb.co/TYP1mJX/Ellipse-11.png">
                 <div class="col datos">
 
                 </div>
@@ -55,13 +55,13 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light menu-mascotas">
             <div class="container-fluid">
                 <a class="nav-link active" aria-current="page" href="index.html" tabindex="-1">
-                    <img src="imagenes/Property 1=home.png" alt="" width="24" height="24"></a>
+                    <img src="https://i.ibb.co/6gqbqj7/Property-1-home.png" alt="" width="24" height="24"></a>
                 <a class="nav-link-mensaje" aria-current="page" href="mensajes.html" tabindex="-1">
-                    <img src="imagenes/Property 1=message-circle.png" alt="" width="24" height="24"></a>
+                    <img src="https://i.ibb.co/SNtNhhC/Property-1-message-circle.png" alt="" width="24" height="24"></a>
                 <a class="nav-link" aria-current="page" href="favoritos.html" tabindex="-1">
-                    <img src="imagenes/Property 1=heart.png" alt="" width="24" height="24"></a>
+                    <img src="https://i.ibb.co/z23WHsF/Property-1-heart.png" alt="" width="24" height="24"></a>
                 <a class="nav-link" aria-current="page" href="#" tabindex="-1">
-                    <img class="icono-activo-perfil" src="imagenes/perfil.png" alt="" width="24" height="24">
+                    <img class="icono-activo-perfil" src="https://i.ibb.co/2vzbqsF/perfil.png" alt="" width="24" height="24">
                 </a>
             </div>
         </nav>
