--- a/Sprint1/iniciarSesion.html
+++ b/Sprint1/iniciarSesion.html
@@ -26,7 +26,7 @@
     </header>
     <main>
         <div class="row usuario">
-            <img src="imagenes/leonidasesteban.com.png">
+            <img src="https://i.ibb.co/472K1FF/leonidasesteban-com.png">
             <div class="col datos">
 
             </div>
