--- a/Sprint1/mensajes.html
+++ b/Sprint1/mensajes.html
@@ -35,13 +35,13 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light menu-mascotas">
             <div class="container-fluid">
                 <a class="nav-link active" aria-current="page" href="index.html" tabindex="-1">
-                    <img src="imagenes/Property 1=home.png" alt="" width="24" height="24"></a>
+                    <img src="https://i.ibb.co/6gqbqj7/Property-1-home.png" alt="" width="24" height="24"></a>
                 <a class="nav-link-mensaje" aria-current="page" href="#" tabindex="-1">
-                    <img class="icono-activo" src="imagenes/mensajes.png" alt="" width="24" height="24"></a>
+                    <img class="icono-activo" src="https://i.ibb.co/GWfwFC6/mensajes.png" alt="" width="24" height="24"></a>
                 <a class="nav-link" aria-current="page" href="favoritos.html" tabindex="-1">
-                    <img src="imagenes/Property 1=heart.png" alt="" width="24" height="24"></a>
+                    <img src="https://i.ibb.co/z23WHsF/Property-1-heart.png" alt="" width="24" height="24"></a>
                 <a class="nav-link" aria-current="page" href="usuario.html" tabindex="-1">
-                    <img src="imagenes/Property 1=user.png" alt="" width="24" height="24">
+                    <img src="https://i.ibb.co/3RMCBkL/Component-2.png" alt="" width="24" height="24">
                 </a>
             </div>
         </nav>
